# task-tracker-api

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
migrations/versions/: 01_68c35bcda355_initial.py  01_d07098932e7c_.py
src/api/common/provider/: aiohttp.py
src/api/v1/: auth.py  di.py
src/api/v1/endpoints/: __init__.py  auth.py  user.py
src/api/v1/handlers/: __init__.py
src/api/v1/handlers/auth/: __init__.py  login.py  logout.py  permission.py  refresh.py
src/api/v1/handlers/user/: __init__.py  create.py  delete.py  select.py  update.py
src/common/: stub.py
src/common/dtos/: __init__.py  auth.py  role.py  status.py  user.py
src/common/tools/: __init__.py  currency.py
src/core/: settings.py
src/database/: gateway.py
src/database/models/: __init__.py  role.py  task.py  task_category.py  task_category_association.py  types.py  user.py
src/database/repositories/: __init__.py  role.py  user.py
src/database/repositories/types/: __init__.py  role.py  user.py
src/services/: __init__.py  auth.py  gateway.py
src/services/internal/: __init__.py  gateway.py  role.py  user.py
